feat: add Prism integration with rollback support and configurable records
Add Prism as an optional logging backend for Axiom and wire Axiom actions into Prism custom actions and rollback handlers.